selfhost/test/typechecker/binary/and_eq_error.2.out
Error at %FILE_NAME%:2:3
Illegal operator
  |  a &&= true
       ^
No operator '&&' exists between types Int and Bool
